Added engine as a submodule to api, needs alot of cleanup, see api/todo.txt
