# api/test.py
@@ -1,0 +1,4 @@
+import engine
+
+print(engine.generate([engine.Texture('monotone')]))
+
